force-app/main/default/objects/sfLma__License__c/sfLma__License__c.object-meta.xml
<CustomObject>
    <description>An object that replicates information from the license object in the subscriber&#39;s Salesforce organization. Records are created each time a subscriber successfully installs a package.</description>
    <label>License</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>