force-app/main/default/objects/sfLma__License__c/fields/sfLma__Expiration__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Expiration__c</fullName>
    <description>Expiration Date of the License, 1/1/1970 represents a perpetual license</description>
    <label>Expiration</label>
    <type>Date</type>
</CustomField>