force-app/main/default/objects/sfLma__License__c/fields/sfLma__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Expiration_Date__c</fullName>
    <description>A formula field which displays the Expiration Date or “Does not expire&quot; based on the value in the Expiration field.</description>
    <formula>if(  sfLma__Expiration__c &lt;&gt; date(1970,1,1),text( sfLma__Expiration__c ),&quot;Does not expire&quot;)</formula>
    <label>Expiration Date</label>
    <type>Text</type>
</CustomField>