force-app/main/default/objects/sfLma__License__c/fields/sfLma__Instance__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Instance__c</fullName>
    <formula>sfLma__Org_Instance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Salesforce instance or pod on which this subscriber organization currently resides.</inlineHelpText>
    <label>Instance</label>
    <type>Text</type>
</CustomField>