force-app/main/default/objects/sfLma__License__c/fields/sfLma__Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Last_Modified__c</fullName>
    <inlineHelpText>The last time the organization information on this page was updated.</inlineHelpText>
    <label>Information Current As Of</label>
    <type>DateTime</type>
</CustomField>