force-app/main/default/objects/sfLma__License__c/fields/sfLma__Lead__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead generated from this install. This field becomes blank once the lead is converted to an account / contact in the lead conversion process</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>R00N30000001JvRAEA0</relationshipName>
    <type>Lookup</type>
</CustomField>