force-app/main/default/objects/sfLma__License__c/fields/sfLma__License_Status__c.field-meta.xml
<CustomField>
    <fullName>sfLma__License_Status__c</fullName>
    <formula>$RecordType.Name</formula>
    <label>License Status</label>
    <type>Text</type>
</CustomField>