force-app/main/default/objects/sfLma__License__c/fields/sfLma__License_Type__c.field-meta.xml
<CustomField>
    <fullName>sfLma__License_Type__c</fullName>
    <description>This field indicates the type of license record. For example, if the license record is &quot;Read-Only&quot;, this license record cannot be modified.</description>
    <label>License Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>