force-app/main/default/objects/sfLma__License__c/fields/sfLma__Licensed_Seats__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Licensed_Seats__c</fullName>
    <description>A text field which displays the number of Licensed Seats or “Site License” based on the numeric field</description>
    <formula>IF( sfLma__Seats__c &gt;=0,  TEXT(sfLma__Seats__c ), &quot;Site License&quot;)</formula>
    <label>Licensed Seats</label>
    <type>Text</type>
</CustomField>