force-app/main/default/objects/sfLma__License__c/fields/sfLma__Org_Edition__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Org_Edition__c</fullName>
    <description>The type of org for this subscriber.</description>
    <formula>sfLma__Org_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Edition</label>
    <type>Text</type>
</CustomField>