force-app/main/default/objects/sfLma__License__c/fields/sfLma__Org_Instance__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Org_Instance__c</fullName>
    <description>The server or pod on which this org resides.</description>
    <label>Org Instance</label>
    <length>6</length>
    <type>Text</type>
</CustomField>