force-app/main/default/objects/sfLma__License__c/fields/sfLma__Org_Status__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Org_Status__c</fullName>
    <description>The status of the subscriber org as of the last time a License record was updated.</description>
    <formula>sfLma__Org_Status_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Status</label>
    <type>Text</type>
</CustomField>