force-app/main/default/objects/sfLma__License__c/fields/sfLma__Org_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Org_Status_Formula__c</fullName>
    <label>Org Status Formula</label>
    <length>20</length>
    <type>Text</type>
</CustomField>