force-app/main/default/objects/sfLma__License__c/fields/sfLma__Org_Trial_Expiration__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Org_Trial_Expiration__c</fullName>
    <label>Org Trial Expiration</label>
    <length>15</length>
    <type>Text</type>
</CustomField>