force-app/main/default/objects/sfLma__License__c/fields/sfLma__Org_Type__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Org_Type__c</fullName>
    <label>Org Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>