force-app/main/default/objects/sfLma__License__c/fields/sfLma__Package_License_ID__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Package_License_ID__c</fullName>
    <description>ID of package license for uninstall tracking</description>
    <label>Package License ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>