force-app/main/default/objects/sfLma__License__c/fields/sfLma__Package_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Package_Version_Number__c</fullName>
    <formula>sfLma__Version_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Version Number</label>
    <type>Text</type>
</CustomField>