force-app/main/default/objects/sfLma__License__c/fields/sfLma__Seats__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Seats__c</fullName>
    <description>number of seats covered by license</description>
    <label>Seats</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>