force-app/main/default/objects/sfLma__License__c/fields/sfLma__Subscriber_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Subscriber_Org_ID__c</fullName>
    <description>This is the ID of the Subscriber organization</description>
    <label>Subscriber Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>