force-app/main/default/objects/sfLma__License__c/fields/sfLma__Subscriber_Org_Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Subscriber_Org_Is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates if the Subscriber organization is a sandbox</description>
    <label>Subscriber Org Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>