force-app/main/default/objects/sfLma__License__c/fields/sfLma__Used_Licenses__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Used_Licenses__c</fullName>
    <label>Used Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>