force-app/main/default/objects/sfLma__License__c/fields/sfLma__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>sfLma__Version_Number__c</fullName>
    <label>Version Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>