force-app/main/default/objects/sfLma__License__c/recordTypes/sfLma__Active.recordType-meta.xml
<RecordType>
    <fullName>sfLma__Active</fullName>
    <active>true</active>
    <label>Active</label>
</RecordType>