force-app/main/default/objects/sfLma__License__c/recordTypes/sfLma__Expired.recordType-meta.xml
<RecordType>
    <fullName>sfLma__Expired</fullName>
    <active>true</active>
    <label>Expired</label>
</RecordType>