force-app/main/default/objects/sfLma__License__c/recordTypes/sfLma__Suspended.recordType-meta.xml
<RecordType>
    <fullName>sfLma__Suspended</fullName>
    <active>true</active>
    <label>Suspended</label>
</RecordType>