force-app/main/default/objects/sfLma__License__c/recordTypes/sfLma__Trial.recordType-meta.xml
<RecordType>
    <fullName>sfLma__Trial</fullName>
    <active>true</active>
    <label>Trial</label>
</RecordType>