force-app/main/default/objects/sfLma__License__c/recordTypes/sfLma__Uninstalled.recordType-meta.xml
<RecordType>
    <fullName>sfLma__Uninstalled</fullName>
    <active>true</active>
    <label>Uninstalled</label>
</RecordType>